--- a/rmd_files/04_data_types_structures.Rmd
+++ b/rmd_files/04_data_types_structures.Rmd
@@ -1,12 +1,17 @@
 ---
 title: "**Data Types and Data Structures**"
 output:
-  html_document: 
-    toc: true
-    toc_float: true
-fontsize: 12pt
-geometry: margin=2cm
+  word_document: default
+  html_document: default
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "output", output_format = "all") })
 ---
+
+
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "output", output_format = "all") })
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
