Changed form Word to PDF output

--- a/rmd_files/04_data_types_structures.Rmd
+++ b/rmd_files/04_data_types_structures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "**Data Types and Data Structures**"
 output:
-  word_document: default
+  pdf_document: default
   html_document: default
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding,
