--- a/rmd_files/01_intro_to_r.Rmd
+++ b/rmd_files/01_intro_to_r.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "R: An Introduction"
 output:
-  word_document: default
+  pdf_document: default
   html_document: default
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding,
