--- a/rmd_files/05_loops_functions.Rmd
+++ b/rmd_files/05_loops_functions.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "**User-Defined Functions and Loops**"
 output:
-  word_document: default
+  pdf_document: default
   html_document: default
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding,
