--- a/rmd_files/06_relational_data.Rmd
+++ b/rmd_files/06_relational_data.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "**Tidy Data and Relational Data**"
 output:
-  word_document: default
+  pdf_document: default
   html_document: default
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding,
