--- a/rmd_files/08_many_models.Rmd
+++ b/rmd_files/08_many_models.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "**Using Big Data to Fit Many Models**"
 output:
-  word_document: default
+  pdf_document: default
   html_document: default
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding,
