--- a/rmd_files/07_lists.Rmd
+++ b/rmd_files/07_lists.Rmd
@@ -3,6 +3,9 @@ title: "**Lists in R**"
 output:
   pdf_document: default
   html_document: default
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "output", output_format = "all") })
 urlcolor: blue
 ---
 
