--- a/rmd_files/04_data_types_structures.Rmd
+++ b/rmd_files/04_data_types_structures.Rmd
@@ -8,11 +8,6 @@ knit: (function(inputFile, encoding) {
   output_dir = "output", output_format = "all") })
 ---
 
-
-knit: (function(inputFile, encoding) {
-  rmarkdown::render(inputFile, encoding = encoding,
-  output_dir = "output", output_format = "all") })
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
@@ -20,7 +15,7 @@ gdp_unemp_df <- read_csv("https://bit.ly/2SZazJc")
 gdp_unemp_df <- gdp_unemp_df %>% mutate_all(as.character)
 ```
 
-Classification is an unexciting but necessary component of any field of learning. When learning a foreign language you typically have a prior grasp of the difference between, say, nouns and verbs, an understanding without which would make learning considerably more difficult. Programming languages are no different in this respect. You'll come to see the benefit of learning some fundamental ideas from computer science and how they are used in R. These benefits result from the fact that many coding mistakes arise from asking R to do things with certain types of data it doesn't (or shouldn't) know how to do. And in the event R doesn't know what to do when you run your code, you will know from the red R-speak returned in the Console. If you have a basic handle on these computer science terms, then you'll have a loose understanding of R-speak and will thus be able to troubleshoot the problem more effectively. Here we'll consider the most fundamental properties of a dataset: Its data structure and the data type of its contents.
+> Classification is an unexciting but necessary component of any field of learning. When learning a foreign language you typically have a prior grasp of the difference between, say, nouns and verbs, an understanding without which would make learning considerably more difficult. Programming languages are no different in this respect. You'll come to see the benefit of learning some fundamental ideas from computer science and how they are used in R. These benefits result from the fact that many coding mistakes arise from asking R to do things with certain types of data it doesn't (or shouldn't) know how to do. And in the event R doesn't know what to do when you run your code, you will know from the red R-speak returned in the Console. If you have a basic handle on these computer science terms, then you'll have a loose understanding of R-speak and will thus be able to troubleshoot the problem more effectively. Here we'll consider the most fundamental properties of a dataset: Its data structure and the data type of its contents.
 
 # Data Structures
 
